--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script src="https://kit.fontawesome.com/fd9f5a6335.js" crossorigin="anonymous"></script>
 	</head>
+
+ <!--Start of Tawk.to Script-->
+	<script type="text/javascript">
+		var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+			(function(){
+		var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+			s1.async=true;
+			s1.src='https://embed.tawk.to/68dcb39f9c002c194a96878a/1j6f1raes';
+			s1.charset='UTF-8';
+			s1.setAttribute('crossorigin','*');
+		s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
+
 	<body class="is-preload landing">
 		<div id="page-wrapper">
 
@@ -63,12 +78,12 @@
 								<div class="col-4 col-12-medium">
 							<h4>Get Better Clients <br> <strong>in Selected Zip Codes</strong> </h4>
 							<h4 style="margin-top: 2em;">Apply Targeting Strategies <br> <strong>to receive Specific Job Requests</strong></h4>
-							<h4 style="margin-top: 2em;">Enable Whole Engine Systems <strong> on Social Media to serve Your Business</strong> </h4>
+							<h4 style="margin-top: 2em;margin-bottom: 2em;">Enable Whole Engine Systems on Social Media <br> <strong> to serve Your Business</strong> </h4>
 							</div>
 								<div class="col-4 col-12-medium">
 							<h4>Implement Forecastable Pipelines <br> <strong> to find Superior In-home Appointments </strong></h4>
 							<h4 style="margin-top: 2em;">Get Step-by-Step Qualification <br> <strong> to ensure Convenient Client Selection</strong> </h4>
-							<h4 style="margin-top: 2em;">Obtain Measurable Resources <br> <strong> to potentiate Your Decision-Making </strong></h4>
+							<h4 style="margin-top: 2em;margin-bottom: 3em;">Obtain Measurable Resources <br> <strong> to potentiate Your Decision-Making </strong></h4>
 							</div>
 						</div>
 					</div>
@@ -81,7 +96,7 @@
 					<div class="content">
 						<header>
 							<h2 style="padding-top: 1em;">Whether <br> You Do Remodeling</h2>
-							<h4 style="margin: 0 0 1em 0;">Or any other construction trade <br> <strong>like Roofing, Siding, Decking, Fencing, Concrete </strong> </h4>
+							<h4 style="margin: 0 0 1em 0;">Or any other construction trade like <br>  <strong> Roofing, Siding, Decking, <br> Fencing, Concrete </strong> </h4>
 						</header>
 			<!--			<h5 style="margin-bottom: 1em;">Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</h5> -->
 						<ul class="actions">
@@ -124,7 +139,7 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span> <i style= "font-size: 2em; margin-bottom: 1em;color:#00061A;" class="fa-solid fa-table"></i></span>
 									<h3>Data-Based</h3>
-									<p>Understand your results on a periodic schedule. Check how your <br> Cost to Acquire a Customer (CAC) improves</p>
+									<p>View and Understand your results. <br> Check how your Cost to Acquire a Customer (CAC) improves</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span> <i style= "font-size: 2em; margin-bottom: 1em;color:#00061A;" class="fa-solid fa-money-bill-wave"></i></span>
@@ -175,9 +190,6 @@
 
 			<!-- Footer -->
 				<footer id="footer">
-					<ul class="icons">
-							<span> <i style= "font-size: 2em; margin-bottom: 1em;" class="fa-solid fa-envelope"></i></span>
-					</ul>
 					<ul class="copyright">
 						<li>2025 &copy; American Housing Author </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
@@ -225,6 +237,8 @@
         console.error(err);
         alert("Error submitting email.");
       });
+	  return false;
+
     });
   </script>
 
